--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,6 +1,11 @@
 Changelog
 =========
 
+1.3.0
+-----
+ - added favicon settings and metas headers
+ - included metas headers in ZMI layout
+
 1.2.0
 -----
  - forms and tables templates updates
