--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,6 +1,14 @@
 Changelog
 =========
 
+1.4.0
+-----
+ - updated forms and tables templates
+ - updated form group switcher interface
+ - added ActionColumn base class to handle action buttons in tables
+ - updated Gitlab-CI configuration
+ - removed Travis-CI configuration
+
 1.3.0
 -----
  - added favicon settings and metas headers
