--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,6 +1,10 @@
 Changelog
 =========
 
+1.5.1
+-----
+ - added MyAMS Emerald theme to ZMI configuration
+
 1.5.0
 -----
  - removed support for Python < 3.7
