--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,6 +1,22 @@
 Changelog
 =========
 
+1.6.0
+-----
+ - use ProtectedViewObjectMixin as base class for table action column, to be able to
+   register custom adapters to define permissions
+ - added missing "context" to permission check
+ - added MyAMS event helper to add new table rows as event callback
+ - added MyAMS container helper to handle attribute switch from action column
+ - added optional "display_if_empty" table attribute to display full template even when the
+   table is empty
+ - updated form's fieldset class handler
+ - updated default table batch size
+ - updated tables templates so that "pyams.toolbar" viewlet manager components may be
+   registered for a table instead of a view into which the table is included
+ - updated tables templates to display a warning message when display is limited to batch size
+ - updated "pyams.context_addings" declaration to include add dropdown menu in any view
+
 1.5.2
 -----
  - added runtime environment description string to be displayed below version number
