--- a/src/pyams_zmi/locales/fr/LC_MESSAGES/pyams_zmi.po
+++ b/src/pyams_zmi/locales/fr/LC_MESSAGES/pyams_zmi.po
@@ -5,7 +5,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE 1.0\n"
-"POT-Creation-Date: 2021-05-31 10:38+0200\n"
+"POT-Creation-Date: 2021-06-14 21:40+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -27,11 +27,11 @@ msgstr "Rechercher"
 msgid "Search criteria"
 msgstr "Critères de recherche"
 
-#: src/pyams_zmi/table.py:247 src/pyams_zmi/zmi/registry.py:92
+#: src/pyams_zmi/table.py:275 src/pyams_zmi/zmi/registry.py:92
 msgid "Name"
 msgstr "Nom"
 
-#: src/pyams_zmi/table.py:399
+#: src/pyams_zmi/table.py:427
 msgid "Delete element"
 msgstr "Supprimer cet élément"
 
@@ -245,6 +245,7 @@ msgstr "Texte recherché"
 msgid "Search"
 msgstr "Chercher"
 
+#: src/pyams_zmi/interfaces/templates/table-multiple.pt:9
 #: src/pyams_zmi/interfaces/templates/table.pt:9
 #: src/pyams_zmi/interfaces/templates/table-empty.pt:8
 #: src/pyams_zmi/interfaces/templates/form.pt:10
@@ -253,9 +254,11 @@ msgid "Back to previous page"
 msgstr "Revenir à la page précédente"
 
 #: src/pyams_zmi/interfaces/templates/table.pt:19
-#: src/pyams_zmi/interfaces/templates/inner-table.pt:13
+#: src/pyams_zmi/interfaces/templates/inner-table.pt:14
 msgid "WARNING: only the first ${length} results are displayed in this table!"
-msgstr "ATTENTION : la liste est tronquée, seuls les ${length} premiers résultats sont affichés !"
+msgstr ""
+"ATTENTION : la liste est tronquée, seuls les ${length} premiers résultats "
+"sont affichés !"
 
 #: src/pyams_zmi/interfaces/templates/inner-table-empty.pt:11
 #: src/pyams_zmi/interfaces/templates/table-empty.pt:16
@@ -281,6 +284,50 @@ msgstr "Le nom de l'attribut à mettre à jour n'a pas été renseigné !"
 #: src/pyams_zmi/helper/container.py:150
 msgid "Element was updated successfully."
 msgstr "L'élément a été modifié avec succès."
+
+#: src/pyams_zmi/zmi/environment.py:49
+msgid "Environment"
+msgstr "Environnement"
+
+#: src/pyams_zmi/zmi/environment.py:59
+msgid "Application runtime environment"
+msgstr "Environnement de l'application"
+
+#: src/pyams_zmi/zmi/environment.py:96
+msgid "Package name"
+msgstr "Nom du package"
+
+#: src/pyams_zmi/zmi/environment.py:111
+msgid "Version"
+msgstr "Version"
+
+#: src/pyams_zmi/zmi/environment.py:126
+msgid "Path"
+msgstr "Chemin"
+
+#: src/pyams_zmi/zmi/environment.py:142
+msgid "Packages versions"
+msgstr "Packages Python"
+
+#: src/pyams_zmi/zmi/environment.py:182
+msgid "Variable name"
+msgstr "Nom de la variable"
+
+#: src/pyams_zmi/zmi/environment.py:196 src/pyams_zmi/zmi/environment.py:266
+msgid "Value"
+msgstr "Valeur"
+
+#: src/pyams_zmi/zmi/environment.py:212
+msgid "Environment variables"
+msgstr "Variables d'environnement"
+
+#: src/pyams_zmi/zmi/environment.py:252
+msgid "Setting name"
+msgstr "Nom du paramètre"
+
+#: src/pyams_zmi/zmi/environment.py:282
+msgid "Configuration settings"
+msgstr "Paramètres de configuration"
 
 #: src/pyams_zmi/zmi/configuration.py:50
 msgid "Configuration"
@@ -411,9 +458,6 @@ msgstr "Rechercher..."
 
 #~ msgid "MyAMS core bundle"
 #~ msgstr "Core-bundle"
-
-#~ msgid "Version package name"
-#~ msgstr "Package de version"
 
 #~ msgid "This package is used to display current application version"
 #~ msgstr ""
