--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,6 +1,10 @@
 Changelog
 =========
 
+1.8.1
+-----
+ - use constant for unknown principal ID
+
 1.8.0
 -----
  - added base ITableView marker interface
