--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,6 +1,10 @@
 Changelog
 =========
 
+1.9.1
+-----
+ - updated user profile theme selection checker to handle empty profiles
+
 1.9.0
 -----
  - added MyAMS dark theme support
